<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_response1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="324dp" />

    <Button
        android:id="@+id/btn_response2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response2"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="324dp" />
        app:layout_constraintLeft_toLeftOf="@+id/btn_response1"

    <Button
        android:id="@+id/btn_response3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="385dp" />

    <Button
        android:id="@+id/btn_response4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response4"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/tv_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_team" />

    <TextView
        android:id="@+id/tv_lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_team"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        tools:layout_editor_absoluteX="247dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_lives" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="241dp"
        android:layout_height="77dp"
        android:text="@string/question"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="290dp" />
</android.support.constraint.ConstraintLayout>