<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/tv_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_offline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="73dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_1Vs1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/btn_1Vs1"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_offline"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="115dp"
        android:onClick="onClick"

        />

    <Button
        android:id="@+id/btn_1VsAi"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/btn_1VsAi"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_offline"
        app:layout_constraintLeft_toRightOf="@+id/btn_1Vs1"
        android:onClick="onClick"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/btn_teamVsTeam"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/btn_teamVsTeam"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_1Vs1"
        android:layout_marginLeft="36dp"
        android:onClick="onClick"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_online"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_teamVsTeam"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_1Vs1Online"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/btn_1Vs1Online"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_online"
        android:layout_marginLeft="36dp"
        android:onClick="onClick"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="-93dp"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="377dp"
        android:orientation="vertical" />
</android.support.constraint.ConstraintLayout>